--- a/preload-lcp-image/inc/css/admin-style.css
+++ b/preload-lcp-image/inc/css/admin-style.css
@@ -19,6 +19,7 @@
         box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.24);
         border: 1px solid #dcdcdc;
         background-color: #fff;
+        margin-bottom: 30px;
     }
 
     .dr_box .dr_avatar {
@@ -37,9 +38,30 @@
         color: #45004f;
     }
 
-    .dr_box_highlighted p {
+    .dr_box p {
         line-height: 1.45em;
         font-size: 1.25em;
+    }
+
+    .dr_box input {
+        background-color: #ffffff !important;
+        color: #333333 !important;
+        border-color: #cccccc;
+        border-radius: 4px !important;
+        border-style: solid !important;
+        border-width: 1px !important;
+        font-size: 14px !important;
+        height: auto;
+        line-height: 21px !important;
+        margin-bottom: 0;
+        margin-top: 0;
+        margin-left: 0;
+        margin-right: 0;
+        padding: 10px 10px !important;
+        margin-bottom: 15px;
+        width: 100% !important;
+        box-sizing: border-box !important;
+        max-width: 100% !important;
     }
 
     .dr_button {
@@ -48,6 +70,17 @@
         text-align: center;
         text-decoration: none;
         font-weight: bold;
+        max-width: 100%;
+    }
+
+    button.dr_button {
+        width: 100%;
+        cursor: pointer;
+    }
+
+    button.dr_button.dr_button_disabled {
+        width: 100%;
+        cursor: not-allowed;
     }
 
     .dr_button_primary {
