--- a/preload-lcp-image/inc/css/admin-style.css
+++ b/preload-lcp-image/inc/css/admin-style.css
@@ -1,3 +1,9 @@
+@media (max-width: 1023px) {
+    .dr_box {
+        max-width: calc( 100% - 45px );
+    }
+}
+
 @media (min-width: 1024px) {
     .dr_admin_main_wrap {
         display: flex;
@@ -12,85 +18,86 @@
         width: 330px;
         padding-right: 15px;
     }
+}
+.dr_box {
+    padding: 15px;
+    -webkit-box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.24);
+    box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.24);
+    border: 1px solid #dcdcdc;
+    background-color: #fff;
+    margin-bottom: 30px;
+}
 
-    .dr_box {
-        padding: 15px;
-        -webkit-box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.24);
-        box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.24);
-        border: 1px solid #dcdcdc;
-        background-color: #fff;
-        margin-bottom: 30px;
-    }
+.dr_box .dr_avatar {
+    float: right;
+    margin-left: 15px;
+    margin-bottom: 15px;
+    border-radius: 100%;
+}
 
-    .dr_box .dr_avatar {
-        float: right;
-        margin-left: 15px;
-        margin-bottom: 15px;
-        border-radius: 100%;
-    }
+.dr_box_highlighted {
+    background-color: #ede2ee;
+    /* color: #FFF; */
+}
 
-    .dr_box_highlighted {
-        background-color: #EDE2EE;
-        /* color: #FFF; */
-    }
+.dr_box_highlighted h2 {
+    color: #45004f;
+}
 
-    .dr_box_highlighted h2 {
-        color: #45004f;
-    }
+.dr_box p {
+    line-height: 1.45em;
+    font-size: 1.25em;
+}
 
-    .dr_box p {
-        line-height: 1.45em;
-        font-size: 1.25em;
-    }
+.dr_box input {
+    background-color: #ffffff !important;
+    color: #333333 !important;
+    border-color: #cccccc;
+    border-radius: 4px !important;
+    border-style: solid !important;
+    border-width: 1px !important;
+    font-size: 14px !important;
+    height: auto;
+    line-height: 21px !important;
+    margin-bottom: 0;
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
+    padding: 10px 10px !important;
+    margin-bottom: 15px;
+    width: 100% !important;
+    box-sizing: border-box !important;
+    max-width: 100% !important;
+}
 
-    .dr_box input {
-        background-color: #ffffff !important;
-        color: #333333 !important;
-        border-color: #cccccc;
-        border-radius: 4px !important;
-        border-style: solid !important;
-        border-width: 1px !important;
-        font-size: 14px !important;
-        height: auto;
-        line-height: 21px !important;
-        margin-bottom: 0;
-        margin-top: 0;
-        margin-left: 0;
-        margin-right: 0;
-        padding: 10px 10px !important;
-        margin-bottom: 15px;
-        width: 100% !important;
-        box-sizing: border-box !important;
-        max-width: 100% !important;
-    }
+.dr_button {
+    display: block;
+    padding: calc(0.667em + 2px) calc(1.333em + 2px);
+    text-align: center;
+    text-decoration: none;
+    font-weight: bold;
+    max-width: 100%;
+}
 
-    .dr_button {
-        display: block;
-        padding: calc(0.667em + 2px) calc(1.333em + 2px);
-        text-align: center;
-        text-decoration: none;
-        font-weight: bold;
-        max-width: 100%;
-    }
+button.dr_button {
+    width: 100%;
+    cursor: pointer;
+}
 
-    button.dr_button {
-        width: 100%;
-        cursor: pointer;
-    }
+button.dr_button.dr_button_disabled {
+    width: 100%;
+    cursor: not-allowed;
+}
 
-    button.dr_button.dr_button_disabled {
-        width: 100%;
-        cursor: not-allowed;
-    }
+.dr_button_primary {
+    border: 2px solid #eb5e28;
+    background-color: #eb5e28;
+    color: #fff;
+}
 
-    .dr_button_primary {
-        border: 2px solid #eb5e28;
-        background-color:#eb5e28;
-        color: #FFF;
-    }
-
-    .dr_button_primary:hover, .dr_button_primary:active, .dr_button_primary:focus {
-        background-color: #FFF;
-        color: #eb5e28;
-    }
+.dr_button_primary:hover,
+.dr_button_primary:active,
+.dr_button_primary:focus {
+    background-color: #fff;
+    color: #eb5e28;
 }
